[tool.poetry]
name = "gatree"
version = "0.1.0"
description = ""
authors = ["Tadej Lahovnik <tadej.lahovnik@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
sklearn = "^0.0.post9"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
numpy = "^1.26.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
