[tool.poetry]
name = "gatree"
version = "0.1.0"
description = ""
authors = ["Tadej Lahovnik <tadej.lahovnik@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.12"
sklearn = "^0.0.post9"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
numpy = "^1.26.0"
pandas = "^2.1.1"
sphinx = {version = "^7.2.6", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.3.0", extras = ["docs"]}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
