[tool.poetry]
name = "gatree"
version = "0.1.5"
description = ""
authors = ["Tadej Lahovnik <tadej.lahovnik@student.um.si>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
scikit-learn = "^1.3.0"
scipy = "^1.11.2"
numpy = "^1.26.0"
pandas = "^2.1.1"
sphinx = {version = "^5.0", extras = ["docs"]}
sphinx-rtd-theme = {version = "^1.0.0", extras = ["docs"]}

[tool.poetry.extras]
docs = ["Sphinx", "sphinx-rtd-theme"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
